# fast_zero

./: pyproject.toml
fast_zero/: app.py
fastapi_zero/fastapi_zero/: .coverage  pyproject.toml
fastapi_zero/fastapi_zero/fastapi_zero/: app.py  schemas.py
